--- a/templates/bundle-home.tpl.html
+++ b/templates/bundle-home.tpl.html
@@ -1,44 +1,11 @@
-<style>
-	/*.bundle-home,*/
-	header, header img {
-		margin: 0 !important;
-		padding: 0 !important;
-	}
-	header img {
-		max-width: 100%;
-	}
-	.ui-title {
-		font-size: 13px !important;
-	}
-	.homeHeader {
-		height: 200px;
-		width: 100%;
-		background-image: url(<%= headerImageUri %>);
-		background-size: 160% auto;
-		background-position: center center;
-	}
-</style>
-<script>
-	// $(function() {
-
-	// 	function setupBackgroundImage
-
-	// });
-</script>
 <header>
 	<div class="homeHeader"></div>
-	<img src="">
 </header>
-<ul id="tour-list" class="ui-listview" data-split-icon="info" data-split-theme="d" data-role="listview">
+<ul id="tour-list" class="ui-listview" data-role="listview">
 	<% _.each(tours, function(tour, i) { %>
 	<li data-icon="false">
 		<a href="#" data-tour-id="<%= tour.get('id') %>" class="tour-info">
-			<div class="tour-wrapper">
-				<% if (headers[i] !== undefined) { %>
-				<div class="tour-image"><img src="<%= headers[i] %>" /></div>
-				<% } %>
-				<div class="tour-title"><span><%= tour.get('title') %></span></div>
-			</div>
+			<%= tour.get('title') %>
 		</a>
 	</li>
 	<% }); %>
