--- a/css/mw14.css
+++ b/css/mw14.css
@@ -42,7 +42,7 @@
 .ui-bar-a select,
 .ui-bar-a textarea,
 .ui-bar-a button {
-	    font-family: Open Sans, Helvetica, Arial, sans-serif /*{global-font-family}*/;
+	    font-family: 'Open Sans', Helvetica, Arial, sans-serif /*{global-font-family}*/;
 }
 .ui-body-a,
 .ui-overlay-a {
@@ -66,7 +66,7 @@
 .ui-body-a select,
 .ui-body-a textarea,
 .ui-body-a button {
-	    font-family: Open Sans, Helvetica, Arial, sans-serif /*{global-font-family}*/;
+	    font-family: 'Open Sans', Helvetica, Arial, sans-serif /*{global-font-family}*/;
 }
 .ui-body-a .ui-link-inherit {
 	color: #333333 /*{a-body-color}*/;
@@ -125,7 +125,7 @@
 .ui-btn-up-a,
 .ui-btn-hover-a,
 .ui-btn-down-a {
-	    font-family: Open Sans, Helvetica, Arial, sans-serif /*{global-font-family}*/;
+	    font-family: 'Open Sans', Helvetica, Arial, sans-serif /*{global-font-family}*/;
 	text-decoration: none;
 }
 /* Structure */
