starting to build out the branded footer in home view

--- a/templates/bundle-home.tpl.html
+++ b/templates/bundle-home.tpl.html
@@ -10,3 +10,8 @@
 	</li>
 	<% }); %>
 </ul>
+<footer class="brand-footer">
+    <img src=""><!-- IMA LOGO -->
+    <p>Powered by TAP.</p>
+    <p>Built by IMA Lab for MW 2014.</p>
+</footer>
