adding tracker id, adding some more home footer markup

--- a/templates/bundle-home.tpl.html
+++ b/templates/bundle-home.tpl.html
@@ -11,7 +11,12 @@
 	<% }); %>
 </ul>
 <footer class="brand-footer">
-    <img src=""><!-- IMA LOGO -->
-    <p>Powered by TAP.</p>
-    <p>Built by IMA Lab for MW 2014.</p>
+    <ul>
+        <li><img src=""><!-- MW LOGO --></li>
+        <li><img src=""><!-- IMA LOGO --></li>
+        <li>
+            <p>Powered by TAP.</p>
+            <p>Built by IMA Lab for MW 2014.</p>
+        </li>
+    </ul>
 </footer>
