adding logos for home footer, some updates to home template

--- a/templates/bundle-home.tpl.html
+++ b/templates/bundle-home.tpl.html
@@ -1,3 +1,31 @@
+<style>
+    .brand-footer {
+        height: 50px;
+    }
+    .brand-footer ul,
+    .brand-footer ul li,
+    .brand-footer ul li p {
+        margin: 0;
+        padding: 0;
+    }
+    .brand-footer ul,
+    .brand-footer ul li {
+        list-style: none;
+    }
+
+    .brand-footer ul li {
+        float: left;
+        padding-right: .7em;
+        height: 100%;
+    }
+    .brand-footer ul li img {
+        max-width: 35px;
+        opacity: .3;
+    }
+    .brand-footer ul li p {
+        font-size: 12px;
+    }
+</style>
 <header>
 	<div class="homeHeader"></div>
 </header>
@@ -12,8 +40,8 @@
 </ul>
 <footer class="brand-footer">
     <ul>
-        <li><img src=""><!-- MW LOGO --></li>
-        <li><img src=""><!-- IMA LOGO --></li>
+        <li><img src="images/logo-mw.png"></li>
+        <li><img src="images/logo-ima.png"></li>
         <li>
             <p>Powered by TAP.</p>
             <p>Built by IMA Lab for MW 2014.</p>
