adding links to branded footer stuff

--- a/templates/bundle-home.tpl.html
+++ b/templates/bundle-home.tpl.html
@@ -44,7 +44,7 @@
         <li><img src="images/logo-ima.png"></li>
         <li>
             <p>Powered by TAP.</p>
-            <p>Built by IMA Lab for MW 2014.</p>
+            <p>Built by <a href="http://lab.imalab.us">IMA Lab</a> for <a href="http://mw2014.museumsandtheweb.com">MW 2014</a>.</p>
         </li>
     </ul>
 </footer>
