another big everything commit merry christmas

--- a/css/main.css
+++ b/css/main.css
@@ -353,3 +353,9 @@ a.next-button {
 .quiz-result {
     display: none;
 }
+
+/* Zoom Stop */
+.zoomingImageDescriptionHandle {
+    padding-right: 10px;
+    font-weight: bold;
+}
