--- a/css/mw14-matt-style.css
+++ b/css/mw14-matt-style.css
@@ -19,8 +19,8 @@
   padding-top:40px;
 }
 body {
-  font-family: 'Open Sans', sans-serif;
-  font-weight:400;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-weight:normal;
 }
 
 
@@ -97,6 +97,7 @@ body {
 /* gets rid of menu background image fade */
 .ui-btn-up-c {
   background-image:none;
+  background-color:#fff;
 }
 .ui-btn-hover-c {
   background-image:none;
@@ -111,13 +112,19 @@ body {
 /* slider with dots */
 /* slide */
 .rslides {
-
+  background:#777;
+  margin-top:24px;
 }
 .rslides .image-slide {
-
+  text-align:center;
 }
 .rslides .image-slide img {
-
+  height:auto !important;
+  width:auto !important;
+  margin:0 auto;
+  float:none;
+  max-width:100%;
+  max-height:100%;
 }
 .rslides .image-slide .caption {
   position:absolute;
@@ -127,9 +134,21 @@ body {
   margin:0;padding:5px;
   font-size:11px;
   text-shadow:none;
+  text-align:left;
+}
+.rslides .image-slide .caption br {
+  display:none;
 }
 .rslides li {
-  max-height:375px;
+  /*max-height:375px;*/
+  /*max-height: 100%;*/
+  height:400px;
+
+}
+@media screen and (max-width: 420px) {
+  .rslides li {
+    height:300px;
+  }
 }
 /* slider dots */
 .rslides_tabs {
@@ -210,7 +229,7 @@ body {
 .mejs-container .mejs-controls .mejs-time span {
   font-style:normal;
   font-weight:300;
-  font-family: 'Open Sans', sans-serif;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   text-shadow:none;
 }
 /* */
@@ -244,7 +263,7 @@ body {
   /*display:table;*/
   width:100%;
   background:#444;
-  font-family: 'Open Sans', sans-serif;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-weight:400!important;
   font-style:normal!important;
   font-size:11px;
@@ -279,7 +298,7 @@ body {
 .audio-slider {
   background-color:#999;
   position:relative;
-  font-family: 'Open Sans', sans-serif;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-weight:400!important;
   font-style:normal!important;
   height:10px;
@@ -297,7 +316,7 @@ body {
   display:table-cell;
   width:22%;
   color:#fff;
-  font-family: 'Open Sans', sans-serif;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-weight:400!important;
   font-style:normal!important;
   box-sizing:border-box;
@@ -329,7 +348,7 @@ body {
 
 /* audio slideshow */
 #audio-slideshow-stop {
-  padding-top:40px;
+  padding-top:38px;
 }
 
 /* home header */
@@ -338,7 +357,10 @@ body {
   background-image: url('../images/splashmap.jpg') !important;
   background-size: 100% auto!important;
   background-position:center center!important;
-  height:220px;
+  height:420px;
+}
+@media screen and (max-width: 420px) {
+  .homeHeader { height:220px; }
 }
 #bundle-home header {
   display:block;
@@ -418,6 +440,7 @@ body {
 .ui-listview-inset .ui-icon-arrow-r {
   background: url('../images/icon-inset-arrow.png') no-repeat center center transparent;
   background-size: 9px 14px;
+  box-shadow:none;
 }
 .ui-listview .ui-li-icon {
   top: .8em;
@@ -468,11 +491,13 @@ body {
 /* minus plus icon overrides */
 .ui-icon-minus {
   background: url('../images/icon-inset-minus.png') no-repeat center center transparent;
-  background-size:13px 13px;;
+  background-size:13px 13px;
+  box-shadow:none;
 }
 .ui-icon-plus {
   background: url('../images/icon-inset-plus.png') no-repeat center center transparent;
-  background-size:13px 13px;;
+  background-size:13px 13px;
+  box-shadow:none;
 }
 
 /* search icon */
@@ -496,4 +521,57 @@ body {
 /* left right buttons fixed header */
 .ui-header-fixed .ui-btn-left, .ui-header-fixed .ui-btn-right {
   top: 7px;
+}
+
+
+/* tour stop list header */
+#tour-stop-list {
+
+}
+#tour-stop-list #header-wrapper {
+  height:200px;overflow:hidden;
+  position:relative;
+}
+#tour-stop-list #header-wrapper img {
+  width:100%;height:auto;
+}
+#tour-stop-list #header-wrapper p {
+  position:absolute;
+  bottom:0;
+  background:rgba(0,0,0,.5);
+  color:#fff;
+  padding:10px;
+  left:0;right:0;
+  margin:0;
+  text-shadow:none;
+  font-size:18px;
+  text-transform:uppercase;
+}
+
+
+.ui-btn.ui-submit {
+  background-color:#C7512A;
+  background-image:none;
+  border:none;
+  box-shadow:none;
+  color:#fff;
+  text-transform:uppercase;
+  text-shadow:none;
+}
+.ui-radio-on {
+  background-color:#ccc;
+}
+.ui-icon-radio-on {
+
+}
+
+/* map stuff */
+.marker-bubble-content .ui-btn {
+  border:none;box-shadow:none;
+}
+.marker-bubble-content .ui-icon-arrow-r {
+  box-shadow:none;
+  background-color:rgba(0,0,0,.6)!important;
+  border-radius:50%;
+  border:none;
 }
