--- a/css/mw14.css
+++ b/css/mw14.css
@@ -42,7 +42,7 @@
 .ui-bar-a select,
 .ui-bar-a textarea,
 .ui-bar-a button {
-	    font-family: 'Open Sans', Helvetica, Arial, sans-serif /*{global-font-family}*/;
+	    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 .ui-body-a,
 .ui-overlay-a {
@@ -66,7 +66,7 @@
 .ui-body-a select,
 .ui-body-a textarea,
 .ui-body-a button {
-	    font-family: 'Open Sans', Helvetica, Arial, sans-serif /*{global-font-family}*/;
+	    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 .ui-body-a .ui-link-inherit {
 	color: #333333 /*{a-body-color}*/;
@@ -125,7 +125,7 @@
 .ui-btn-up-a,
 .ui-btn-hover-a,
 .ui-btn-down-a {
-	    font-family: 'Open Sans', Helvetica, Arial, sans-serif /*{global-font-family}*/;
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 	text-decoration: none;
 }
 /* Structure */
@@ -150,7 +150,7 @@ a.ui-link-inherit {
 	background-image:     -ms-linear-gradient( #df5b2d /*{global-active-background-start}*/, #df5b2d /*{global-active-background-end}*/); /* IE10 */
 	background-image:      -o-linear-gradient( #df5b2d /*{global-active-background-start}*/, #df5b2d /*{global-active-background-end}*/); /* Opera 11.10  */
 	background-image:         linear-gradient( #df5b2d /*{global-active-background-start}*/, #df5b2d /*{global-active-background-end}*/);
-	    font-family: Open Sans, Helvetica, Arial, sans-serif /*{global-font-family}*/;
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 .ui-btn-active:visited,
 .ui-btn-active:hover,
@@ -501,7 +501,7 @@ a.ui-link-inherit {
 .ui-btn-up-c, .ui-btn-hover-c, .ui-btn-down-c,
 .ui-bar-a, .ui-bar-a input, .ui-bar-a select, .ui-bar-a textarea, .ui-bar-a button,
 .ui-bar-a h3 {
-	font-family: 'Open Sans', sans-serif;
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 	font-weight:400!important;
 	font-style:normal!important;
 }
