--- a/templates/bundle-home.tpl.html
+++ b/templates/bundle-home.tpl.html
@@ -27,7 +27,9 @@
     }
 </style>
 <header>
-	<div class="homeHeader"></div>
+	<div class="homeHeader">
+		<p class="caption">TAP Into Baltimore</p>
+	</div>
 </header>
 <ul id="tour-list" class="ui-listview" data-role="listview">
 	<% _.each(tours, function(tour, i) { %>
