--- a/css/mw14-matt-style.css
+++ b/css/mw14-matt-style.css
@@ -113,7 +113,7 @@ body {
 /* slide */
 .rslides {
   background:#777;
-  margin-top:24px;
+  margin-top:38px;
 }
 .rslides .image-slide {
   text-align:center;
@@ -283,9 +283,10 @@ body {
   box-sizing:border-box;
   color:rgba(255,255,255,0);
   float:left;
-  margin-top:7px;
+  margin-top:0px;
   background: url('../images/icon-play.png') no-repeat center center transparent;
   background-size:8px 6px;
+  height:30px;
 }
 .play-pause.play {
   background: url('../images/icon-play.png') no-repeat center center transparent;
