Update back button to use font awesome

--- a/templates/header.tpl.html
+++ b/templates/header.tpl.html
@@ -1,8 +1,8 @@
 <% if (displayBackButton) { %>
-<a href="#" id="back-button" data-role="back" data-icon="arrow-l">Back</a>
+<a href="#" id="back-button" data-role="back" data-icon="arrow-l" class="ui-btn-back"><i class="fa fa-caret-left"></i> Back</a>
 <% } %>
 <h3><%= title %></h3>
 <% if (displaySocialButton) { %>
-<a href="#" id="social-button" data-role="button" data-icon="social" 
+<a href="#" id="social-button" data-role="button" data-icon="social"
 data-iconpos="notext" data-iconshadow="false" class="ui-icon-nodisc ui-btn-right">Social</a>
 <% } %>
