--- a/templates/tour-list.tpl.html
+++ b/templates/tour-list.tpl.html
@@ -1,3 +1,5 @@
+<h1>Welcome</h1>
+<p>Please choose an area to start a tour.</p>
 <ul id="tour-list" class="ui-listview" data-split-icon="info" data-split-theme="d" data-role="listview">
 	<% _.each(tours, function(tour, i) { %>
 	<li data-icon="false">
