Update go and clear buttons to have specific class for each and remove clear text.

--- a/templates/keypad.tpl.html
+++ b/templates/keypad.tpl.html
@@ -32,12 +32,12 @@
         <div data-role="button" data-theme="a" class="keypad-button">9</div>
     </div>
     <div class="ui-block-a" id="clear-button-wrapper">
-        <div id="clear-button" data-role="button" data-theme="b" class="action-button">Clear</div>
+        <div id="clear-button" data-role="button" data-theme="b" class="action-button clear-button"></div>
     </div>
     <div class="ui-block-b">
         <div data-role="button" data-theme="a" class="keypad-button">0</div>
     </div>
     <div class="ui-block-c">
-        <div id="go-button" data-role="button" data-theme="b" class="action-button ui-disabled">Go</div>
+        <div id="go-button" data-role="button" data-theme="b" class="action-button go-button ui-disabled">Go</div>
     </div>
 </fieldset>
